# coxwave-openai-hackerton

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: CLAUDE.md  pyproject.toml
backend/app/: agent.py  attachment_store.py  attachments.py  main.py  memory_store.py  server.py  thread_item_converter.py  video_agent.py  video_project_state.py  video_project_store.py
backend/app/integrations/: __init__.py
backend/app/integrations/video_generation/: __init__.py  exceptions.py  service.py  types.py
backend/app/integrations/video_generation/providers/: __init__.py  base.py  sora.py  veo.py
backend/app/tools/: __init__.py  video_generations.py
backend/tests/: conftest.py  test_integration.py  test_providers.py  test_service.py  test_types.py  test_video_generations.py
backend_local/: pyproject.toml
backend_local/app/: attachment_store.py  main.py  memory_store.py  server.py
data/project/: project_example.json
data/video_generations/: video_generations_example.json  video_generations_schema.json
docs/: project_schema.md  video_generations_schema.md  video_model_spec.md
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: ClipSelectionPanel.tsx  FinalVideoPanel.tsx  StoryboardPanel.tsx
frontend/src/lib/: i18n.ts  mockData.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
scripts/: run-backend.sh
